<resources>
    <string name="app_name">BLive</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_maps">Maps</string>
    <string name="nav_list">List</string>
    <string name="nav_account">Account</string>
    <string name="nav_voice">Voice</string>
    <string name="nav_direction">Direction</string>
    <string name="nav_myLocation">My Location</string>
    <string name="nav_sort">Sort</string>

</resources>
