<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_dashboard_black"
        android:title="@string/nav_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/ic_view_list_black"
        android:title="@string/nav_list"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_maps"
        android:icon="@drawable/ic_location_black"
        android:title="@string/nav_maps"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_black"
        android:title="@string/nav_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_person_black"
        android:title="@string/nav_account"
        app:showAsAction="ifRoom"/>
</menu>